<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">黑黑</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>

    <!-- main tab -->
   
    <string name="btn_danmaku_switch_checked_text">发起弹幕，1钻石/条</string>
    <string name="btn_danmaku_switch_checkun_text">快来说点什么吧.....</string>
    <string name="main_tabbar_home">首页</string>
    <string name="main_tabbar_questions">问题集</string>
    <string name="return_home">返回首页</string>
    <string name="follow_lives_persion">关注主播</string>
    <string name="lives_ing">正在直播中..</string>
    <string name="main_tabbar_dynamic">动态</string>
    <string name="login_proxy_tip_start">登录/注册则默认您同意</string>
    <string name="login_proxy_tip_information">《黑黑用户使用条款》</string>
    <string name="login_mobile_phone">手机登录</string>
    <string name="login_send_sms">验证码已发送,请注意查收</string>
    <string name="login_fail_try_retry">登录失败，请重试</string>
    <string name="login_identifying_code">验证码</string>
    <string name="login_identifying_code_try">重新获取</string>
    <string name="please_input_identifying_code">请输入验证码</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="use_identifying_code_login">使用验证码可直接登录</string>
    <string name="user_cancel_black">解除拉黑</string>
     <string name="user_black_confirm">是否确定拉黑？</string>
    <string name="user_calling_end">对方已取消约聊</string>
    <string name="ifentifying">验证</string>
    <string name="light">高亮</string>
    <string name="message_dialog_item_due_try_number">约你私聊%1$s次</string>
    <string name="internet_fail">网不好，没法播哦~</string>
    <string name="user_commission_cash_withdrawal_agreement">佣金提现协议</string>
    <string name="user_manager">管理</string>
    <string name="user_report">举报</string>
    <string name="user_shutup">禁言</string>
    <string name="user_cancel_shutup">取消禁言</string>
    <string name="user_report_tip">感谢您的举报，我们会尽快做出处理</string>
    <string name="user_location_fail">黑社会</string>
    <string name="user_connect_fail">对方无响应！</string>
    <string name="user_connect_success">连接成功！</string>
    <string name="user_city_title">所在城市</string>
    <string name="user_unlogin_declare">你确认要退出？</string>
    <string name="user_goto_pmfragment">是否终止当前直播？</string>
    <string name="user_close_pmfragment">是否终止当前黑聊？</string>
    <string name="user_pm_goto_livepage">您是否确认关闭对聊？</string>
    <string name="user_mylive_null">瞅啥瞅，你得直播呀~</string>
    <string name="user_fans_declear">没关系，我就是你的粉丝</string>
    <string name="user_fans_declear_other">求关注</string>
    <string name="user_exchange_success">兑换成功</string>
    <string name="user_black_declear">木有讨厌的人耶</string>
    <string name="user_follow_declear">啧啧，没人吸引我啊</string>
    <string name="user_follow_declear_other">太高冷了</string>
    <string name="login_success">登录成功</string>
    <string name="login">登录</string>
    <string name="title">标题</string>
    <string name="live_end">直播结束</string>
    <string name="live_look_persion">人看过</string>
    <string name="live_harvest">收获</string>
    <string name="present_rules">提现规则</string>
    <string name="user_present_commit">提现申请已提交，请注意查收</string>
    <string name="user_persent_to_account">提现账户</string>
    <string name="success">完成</string>
    <string name="message_invitation">约聊</string>
    <string name="message_close">忽略</string>
    <string name="create_live_title">请输入你想聊的话题</string>
    <string name="create_live_share_sinaweibo">点击开始后会分享到微博</string>
    <string name="create_live_share_wechat_friend">点击开始后会分享到微信好友</string>
    <string name="create_live_share_wechat">点击开始后会分享到微信朋友圈</string>
    <string name="live_share_to">分享到</string>
    <string name="app_exit_dialog">再按一次返回键返回桌面</string>
    <string name="user_mine_live">我的直播</string>
    <string name="cancel">取消</string>
    <string name="user_sign_born">选择出生日期，系统将会自动转换成星座</string>
    <string name="confirm">确定</string>
    <string name="create_live_topic">话题</string>
    <string name="user_black_account">黑户</string>
    <string name="user_black_bore">钻</string>
    <string name="user_account_lucre">收益</string>
    <string name="user_account_bill">黑票</string>
    <string name="user_account_mine_bore">黑户</string>
    <string name="user_account_balance">黑户余额:</string>
    <string name="user_account_pay">充值</string>
    <string name="user_pay_success">支付成功</string>
    <string name="user_pay_fail">支付失败</string>
    <string name="user_pay_cancel">支付取消</string>
    <string name="user_account_pay_add_bore">赠送10钻石</string>
    <string name="user_account_bill_frances_bore">兑换钻石</string>
    <string name="money">元</string>
    <string name="frances">兑换钻石</string>
    <string name="user_account_withdrawals">提现</string>
    <string name="user_withdrawals_declare">为保证您的资金及账户安全，请填写真实账户信息</string>
    <string name="user_account_info">账户信息</string>
    <string name="cash_withdrawal_amount">可提现金额</string>
    <string name="user_withdrawal_money">提现金额</string>
    <string name="input_phone_number">请输入手机号(必填)</string>
    <string name="phone_number">手机号</string>
    <string name="national_identifiers_number">身份证号</string>
    <string name="input_national_identifiers_number">请输入身份证号(必填)</string>
    <string name="input_name">请输入姓名(必填)</string>
    <string name="name">姓名</string>
    <string name="ali_pay_number">支付宝账号</string>
    <string name="input_ali_pay_number">请输入支付宝账户(必填)</string>
    <string name="mine_agree">我同意</string>
    <string name="agree">同意</string>
    <string name="user_mine_income">我的收益</string>
    <string name="title_pm">黑聊</string>
    <string name="start">开始</string>
    <string name="user_concerned_people">关注的人</string>
    <string name="psersion">人</string>
    <string name="user_create_live">发起直播</string>
    <string name="user_update_live">修改直播话题</string>
    <string name="user_add_follow">+关注</string>
    <!-- 用户资料 -->
    <string name="user_nick_name">昵称</string>
    <string name="user_input_nick_name">请输入昵称</string>
    <string name="user_sex_information">* 性别选择后不可更改！</string>
    <string name="user_sex_information_edit">* 性别更改请联系客服！</string>
    <string name="user_sex">性别</string>
    <string name="user_sex_boy">男</string>
    <string name="user_sex_girl">女</string>
    <string name="user_brithday">生日</string>
    <string name="user_choice_brithday">请选择出生日期</string>
    <string name="user_city">城市</string>
    <string name="user_city_location">请定位城市</string>
    <string name="user_autograph">个性签名</string>
    <string name="user_input_autograph">一句话介绍下自己</string>
    <string name="user_get_into">进入</string>
    <string name="user_constellation">摩羯水瓶双鱼白羊金牛双子巨蟹狮子处女天秤天蝎射手魔羯</string>
    <string name="user_year">年</string>
    <string name="user_month">月</string>
    <string name="user_day">日</string>

    <!-- Weibo String -->
    <string name="share_weibo_app_key">1004340920</string>
    <string name="share_weibo_direct_url">http://www.weibo.com/youcamlive</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_time_rightnow">刚刚</string>
    <string name="xlistview_time_minute">%1$s分钟前</string>
    <string name="xlistview_time_hour">%1$s小时前</string>
    <string name="xlistview_time_yesterday">昨天 %1$s</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="user_exit_login">退出登录</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="me_follow_num">关注 %s</string>
    <string name="me_fans_num">粉丝 %s</string>
    <string name="me_my_lives">我的直播</string>
    <string name="setting_edit_information">编辑资料</string>
    <string name="lives_for_other">TA的直播</string>
    <string name="me_setting">设置</string>
    <string name="setting_black">黑名单</string>
    <string name="setting_clear_memory">清理缓存</string>
    <string name="setting_comment">给黑黑好评</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_improve_data">完善资料</string>
    <string name="setting_notice">社区公约</string>
    <string name="setting_proxy">服务条款与使用协议</string>
    <string name="setting_contact_us">联系我们</string>
    <string name="setting_copyright">Copyright © 2016 Wenlu.com All Rights Reserved</string>
    <string name="user_dialog_ticker">收益 %s</string>
    <string name="user_follow">关注</string>
    <string name="user_followed">已关注</string>
    <string name="user_fans">粉丝</string>
    <string name="user_live">直播</string>
    <string name="user_send">送出</string>
    <string name="user_private_message">约聊</string>
    <string name="user_black">拉黑</string>
    <string name="user_blacked">已拉黑</string>
    <string name="user_msg_private_message">约你私聊</string>
    <string name="report_gender_error">性别不符</string>
    <string name="report_ad">广告欺诈</string>
    <string name="report_bitch">骚扰谩骂</string>
    <string name="report_sexy">淫秽色情</string>
    <string name="pay_wx">微信支付</string>
    <string name="pay_zhifubao">支付宝支付</string>
    <string name="live_tip_nosave">时长较短的直播不予保存(小于5min)</string>
    <string name="live_topic">%s</string>
    <string name="live_topic_too_long">您输入的话题过长哦~</string>
    <string name="live_network_error_tip">当前网络不佳，即将关闭直播</string>
    <string name="share_wx">微信</string>
    <string name="share_wx_friend">朋友圈</string>
    <string name="share_sina">微博</string>
    <string name="account_nickname_null">昵称不能为空</string>
    <string name="account_nickname_too_long">您输入的昵称过长哦</string>
    <string name="account_sign_null">个性签名不能为空</string>
    <string name="account_sign_too_long">个性签名不能超过48个字节</string>
    <string name="account_choose_sex">请选择性别</string>
    <string name="account_choose_birthday">请选择出生日期</string>
    <string name="pm_load_start">开始匹配</string>
    <string name="pm_load_fail">找不到耶，再试试~</string>
    <string name="live_share_text">快来围观！点此进入>>~</string>
    <string name="live_share_title">黑黑APP！</string>
    <string name="due_ing_alert">约聊中，不能太贪心~</string>
    <string name="live_share_weibo_text">%1$s正在直播，快来一起看！点此进入>></string>
    <string name="due_call_end_text">%1$s</string>
    <string name="due_dialog_time">点击查看（%1$s）</string>
    <string name="due_call_end">挂断</string>
    <string name="due_call_ing_text">同意（%1$s</string>
    <string name="share_wechat_no_avliible">您还没有安装微信哦~</string>
    <string name="share_weibo_no_avliible">您还没有安装新浪微博哦~</string>

    <!-- Account Manager -->
    <string name="account_manager_type">com.wmlive.account</string>
    <string name="play_url_invalid">播放地址不合法</string>
    <string name="play_connect_fail">无法连接</string>
    <string name="like_one_tip">点亮了</string>
    <string name="like_two_tip">又点亮了</string>
    <string name="like_three_tip">用了洪荒之力点亮了</string>
    <string name="excharge_danmaku_tip">当前余额不足，充值才能继续发弹幕，是否去充值？</string>
    <string name="excharge_gift_tip">当前余额不足，充值才能继续送礼物，是否去充值？</string>
    <string name="stop_yueliao_topic">您确认关闭当前约聊？</string>
    <string name="withdraw_tip">提现请联系黑黑官方客服\n微信号：heiheiapp</string>
    <string name="live_delete_tip">确定删除？</string>
    <string name="account_login_other_tip">此账号已在别处登录</string>
    <string name="update_common_prompt">由于您当前版本过低，为了不影响您的正常使用，请立即更新。</string>
    <string name="update_enforced_prompt">当前版本已不可使用，请立即更新。</string>
    <string name="update_information_title">更新提示</string>
    <string name="update_information_ok">立即更新</string>
    
    
    <!-- network start toast -->
    <string name = "network_status_off">当前网络连接不可用</string>
    <string name = "network_status_on_limit">当前网络不佳，正在尝试重新连接</string>
    <string name = "network_status_on_success">当前网络连接成功</string>
    <string name = "network_status_on_unlimit">当前网路畅通，重连成功</string>
    <string name = "error_live_exception_message">无法连接当前播放地址，请退出当前直播</string>
    <string name = "error_live_is_not_exit">服务器已关闭当前直播间,请选择其他直播间</string>

</resources>