<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg" >

    <TextView
        android:id="@+id/live_end_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/t110dp"
        android:text="@string/live_end"
        android:textColor="@color/hh_color_e"
        android:textSize="@dimen/t30dp" />

    <LinearLayout
        android:id="@+id/live_end_persions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/live_end_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/t29dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_look_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/hh_color_e"
            android:textSize="@dimen/t18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_look_persion"
            android:textColor="@color/hh_color_a"
            android:textSize="@dimen/t18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/live_end_share_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/live_end_persions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/t150dp"
        android:text="@string/live_share_to"
        android:textColor="@color/hh_color_a"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/live_end_share_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/live_end_share_title"
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/t15dp"
        android:paddingRight="@dimen/t15dp" >

        <LinearLayout
            android:id="@+id/btn_share_wx"
            android:layout_width="@dimen/t113dp"
            android:layout_height="@dimen/t35dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/hh_register_wechat" />

            <TextView
                style="@style/tv_a_28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/share_wx" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/t3dp"
            android:layout_height="@dimen/t3dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/shape_bolt" />

        <LinearLayout
            android:id="@+id/btn_share_friend"
            android:layout_width="@dimen/t113dp"
            android:layout_height="@dimen/t35dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/hh_live_share_friendcircle" />

            <TextView
                style="@style/tv_a_28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/share_wx_friend" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/t3dp"
            android:layout_height="@dimen/t3dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/shape_bolt" />

        <LinearLayout
            android:id="@+id/btn_share_sina"
            android:layout_width="@dimen/t113dp"
            android:layout_height="@dimen/t35dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/hh_register_weibo" />

            <TextView
                style="@style/tv_a_28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/share_sina" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_below="@id/live_end_share_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:background="@drawable/btn_stoke_white_corner_selector"
        android:text="@string/follow_lives_persion"
        android:textColor="@color/hh_color_a"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_below="@id/live_end_share_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/t98dp"
        android:background="@drawable/btn_login_selector"
        android:minHeight="44dp"
        android:text="@string/return_home"
        android:textColor="@color/btn_login_text_color_selector"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/ll_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/live_end_persions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/t37dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" 
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_harvest"
                android:textColor="@color/hh_color_a"
                android:textSize="@dimen/t18dp" />

            <TextView
                android:id="@+id/tv_ticker_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="0"
                android:textColor="@color/hh_color_h"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/user_account_bill"
                android:textColor="@color/hh_color_a"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_live_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/t6dp"
            android:text="@string/live_tip_nosave"
            android:textColor="@color/hh_color_b"
            android:textSize="12dp" />
    </LinearLayout>

</RelativeLayout>